--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "http://gabrielnumax.github.io/react-e-commerce",
+{
+  "homepage": "http://gabrielnumax.github.io/react-e-commerce",
   "name": "react-e-commerce",
   "version": "0.1.0",
   "private": true,
